# gpb

./: Cargo.toml  LICENSE  README.md
.github/workflows/: push.yaml  release.yaml
src/: file_monitor.rs  lib.rs  main.rs
