[package]
name = "gpb"
version = "0.1.0"
authors = ["Charlie Pitkin <charlie.pitkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "0.4"
structopt = "0.2"
notify = "5.0.0-pre.2"
crossbeam-channel = "0.4"
