[package]
name = "gpba"
version = "0.1.0"
authors = ["Charlie Pitkin <charlie.pitkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
structopt = "0.3.14"
filebuffer = "0.4.0"
zip = "0.5"
rusync = "0.5.3"
